<resources>
    <string name="app_name">Black Browser</string>
    <string name="url_hint">اكتب رابط او دور جوجل</string>
    <string name="adblock_desc_on">مانع الإعلانات: شغال</string>
    <string name="adblock_desc_off">مانع الإعلانات: متوقف</string>
    <string name="adblock_on_toast">مانع الإعلانات اتفعل</string>
    <string name="adblock_off_toast">مانع الإعلانات اتوقف</string>
    <string name="downloading">جاري التحميل</string>
    <string name="download_started">بدأ تحميل: %1$s</string>
    <string name="download_failed">فشل التحميل</string>
    <string name="download_permission_denied">لازم صلاحية التخزين عشان التحميل يشتغل</string>
    <string name="download_open_failed">معرفتش افتح الملف اللي اتحمل</string>
    <string name="set_default_browser_desc">تعيين كمتصفح افتراضي</string>
    <string name="set_default_browser_failed">معرفتش افتح إعدادات المتصفح الافتراضي</string>
    <string name="tabs_desc">التبويبات المفتوحة</string>
    <string name="tabs_title">التبويبات</string>
    <string name="new_tab">+ تبويب جديد</string>
    <string name="new_tab_title">تبويب جديد</string>
    <string name="close_tab_desc">قفل التبويب</string>
    <string name="history_desc">سجل التصفح</string>
    <string name="history_title">سجل التصفح</string>
    <string name="clear_history">مسح السجل</string>
    <string name="history_empty">مفيش سجل تصفح لسه</string>
    <string name="downloads_desc">التحميلات</string>
    <string name="downloads_title">التحميلات</string>
    <string name="downloads_empty">مفيش تحميلات لسه</string>
    <string name="download_status_pending">قيد الانتظار</string>
    <string name="download_status_running">جاري التحميل</string>
    <string name="download_status_running_percent">جاري التحميل %1$d٪</string>
    <string name="download_status_paused">متوقف مؤقتاً</string>
    <string name="download_status_paused_percent">متوقف مؤقتاً %1$d٪</string>
    <string name="download_status_success">تم التحميل</string>
    <string name="download_status_failed">فشل التحميل</string>
    <string name="desktop_site_desc_on">وضع سطح المكتب: شغال</string>
    <string name="desktop_site_desc_off">وضع سطح المكتب: متوقف</string>
    <string name="desktop_mode_on_toast">هيفتح المواقع بشكل سطح المكتب</string>
    <string name="desktop_mode_off_toast">رجع لوضع الموبايل العادي</string>
    <string name="webview_channel_warning_title">الـ WebView مش على قناة الـ Stable</string>
    <string name="webview_channel_warning_message">التطبيق شغال دلوقتي على %1$s (نسخة %2$s)، وده مش قناة الـ Stable الرسمية. تحب ترجع للنسخة المستقرة؟</string>
    <string name="webview_open_play_store">افتح Google Play</string>
    <string name="webview_dismiss">تجاهل</string>
    <string name="webview_play_store_open_failed">معرفتش افتح Google Play</string>
    <string name="new_incognito_tab">+ تبويب خفي</string>
    <string name="incognito_tab_title">تبويب خفي</string>
    <string name="incognito_tab_desc">تبويب تصفح خفي</string>
    <string name="file_chooser_title">اختيار ملف</string>
    <string name="save_image_dialog_title">تحميل الصورة؟</string>
    <string name="save_image_action">تحميل</string>
</resources>
